--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Desmond's site</title>
-    <link rel="stylesheet" href="CSS-Site/CSS/styles.css">
+    <link rel="stylesheet" href="/CSS-Site/CSS/styles.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
   </head>
