--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="Middle-container">
       <div class="profile">
 
-        <img class="mepicreal" src="CSS-Site/Profpic.jpg" alt="Me">
+        <img class="mepicreal" src="/CSS-Site/Profpic.jpg" alt="Me">
         <h2>Hello.</h2>
           <p class="intro">During med-school I learned that there is a lot of benefit to be gained by improving the quality of the healthcare apps. Slowly, I
           started to realize that I had to use my knowledge obtained in med-school to create better healthcare apps.</p>
